--- a/third.html
+++ b/third.html
@@ -29,14 +29,13 @@ $(document).ready(function(){
 
 <body>
   <div class="myDiv3">
-    <p>Demonstrate fadeIn() with different parameters.</p>
 
-    <button>Click to fade in boxes</button><br><br>
+    <button>Click Here</button><br><br>
 
     <div id="div1" style="width:350px;height:350px;display:none;background-color:blue;"></div><br>
     <div id="div2" style="width:350px;height:350px;display:none;background-color:purple;"></div><br>
     <div id="div3" style="width:350px;height:350px;display:none;background-color:grey;"></div><br>
-    <div id="div4" <button><a href="fourth.html">Click Next</a></button></div>
+    <div id="div4" <button><a href="fourth.html">You're Almost There</a></button></div>
   </div>
 
 
